--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,5 @@
 @import "./icone";
 @import "./variable";
+@import "./fonts";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "./modules/styles";
