--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -1,3 +1,20 @@
-h1{
-    font-size: 500px;
+.carousel-item{
+    img{
+        width: 100%;
+        filter: brightness(20%);
+        height: 100vh;
+    }
+}
+.carousel-caption{
+    @include media-breakpoint-down(md){
+
+    }
+
+}
+.carousel-indicators{
+    li{
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+    }
 }
