--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -1,3 +1,35 @@
-li:hover{
-    background-color:rgb(196,45, 64);
+.nav-item:hover{
+    background-color: rgb(196, 45,64);
 }
+nav{
+border: solid;
+
+/* filter: brightness(20%); */
+position:fixed;
+top: 0px;
+
+}
+.navbar{
+    position:fixed;
+top: 0px;
+z-index: 2;
+}
+.navbar-nav{
+    width: 50%;
+}
+@media (min-width:320px) and (max-width:445px){
+    
+    
+    
+    .nav-link{
+        font-size: 5px;
+    }
+}
+@media (min-width:992px) and (max-width:1084px){
+    
+    .nav-link{
+        font-size: 10px;
+    }
+    
+    
+}   
