--- a/src/scss/modules/_styles.scss
+++ b/src/scss/modules/_styles.scss
@@ -1,3 +1,8 @@
 @import "./header";
 @import "./nav";
+@import "./section";
+@import "./section2";
+@import "./section3";
+@import "./section4";
 @import "./body";
+@import "./footer";
